ci: add legacy tags

--- a/.releaserc
+++ b/.releaserc
@@ -13,7 +13,30 @@
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "angular",
+        "releaseRules": [
+          {
+            "type": "DEV",
+            "release": "minor"
+          },
+          {
+            "type": "PRJ",
+            "release": false
+          },
+          {
+            "type": "ENH",
+            "release": "patch"
+          },
+          {
+            "type": "BUG",
+            "release": "patch"
+          }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     [
