fix: ENH to minor

--- a/.releaserc
+++ b/.releaserc
@@ -28,7 +28,7 @@
           },
           {
             "type": "ENH",
-            "release": "patch"
+            "release": "minor"
           },
           {
             "type": "BUG",
