--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: blastfoam-package
-          path: ${{ github.workspace }}/blastfoam_${{ needs.version.outputs.version }}_amd64.deb
+          path: ${{ github.workspace }}/blastfoam_*.deb
           retention-days: 7
 
   release-deb:
