Revert "debug: run deployment on feature branch"
This reverts commit a822ed756009167a9780cfcc6167d4d3842a8d61.

This will bring back the expected behavior of only pushing releases when needed

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,6 +1,12 @@
 name: Deployment
 
-on: push
+on:
+  push:
+    branches:
+      - "main"
+      - "master"
+      - "staging"
+      - "develop"
 
 concurrency:
   #* Only run one run at a time
