--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -6,7 +6,7 @@ on:
       - "9-push-main-to-public-repo"
 
 env:
-  PROD_REPO: "github.com/synthetik-technologies/blastfoam-public-test"
+  PROD_REPO: "github.com/synthetik-technologies/blastfoam-public-test.git"
 
 jobs:
   public-deployment:
@@ -24,4 +24,4 @@ jobs:
 
       - name: Push code
         run: |
-          git push --force-with-lease "${{ secrets.SYN_BOT_READ_WRITE }}@${{ env.PROD_REPO }}" HEAD:master
+          git push --force-with-lease "https://${{ secrets.SYN_BOT_READ_WRITE }}@${{ env.PROD_REPO }}" HEAD:master
