--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   PROD_REPO: "https://github.com/synthetik-technologies/blastfoam-public-test.git"
+  TEST_TAG: "5.2.0-develop.3"
 
 jobs:
   code:
@@ -21,3 +22,23 @@ jobs:
 
       - name: Push Code Publically
         run: git push --force "${{ env.PROD_REPO }}" HEAD:master
+
+  docker:
+    name: Deploy Docker Code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to GitHub Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.SYN_BOT_READ_WRITE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: jacobhoehler
+          password: ${{ secrets.DOCKERHUB_JH }}
+
+      - name: Pull Image
+        run: docker pull "ghcr.io/${{ github.repository }}:${{ env.TEST_TAG }}"
