--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -24,7 +24,7 @@ jobs:
         run: git push --force "https://github.com/${{ env.PROD_REPO }}" HEAD:master
 
   docker:
-    name: Deploy Docker Code
+    name: Deploy Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Login to GitHub Registry
@@ -40,5 +40,13 @@ jobs:
           username: jacobhoehler
           password: ${{ secrets.DOCKERHUB_JH }}
 
+      - name: Create Image Tags
+        run: |
+          echo "DEV_IMAGE=ghcr.io/${{ github.repository }}:${{ env.TEST_TAG }}" >> $GITHUB_ENV
+          echo "GHCR_PROD_IMAGE=ghcr.io/${{ env.PROD_REPO }}:${{ env.TEST_TAG }}" >> $GITHUB_ENV
+
       - name: Pull Image
-        run: docker pull "ghcr.io/${{ github.repository }}:${{ env.TEST_TAG }}"
+        run: docker pull "${{ env.DEV_IMAGE }}"
+
+      - name: Rename Image
+        run: docker tag ${{ env.DEV_IMAGE }} ${{ env.GHCR_PROD_IMAGE }}
