--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -39,13 +39,14 @@ jobs:
         with:
           username: jacobhoehler
           password: ${{ secrets.DOCKERHUB_JH }}
+      - name: Construct Dev Tag
+        run: echo "DEV_IMAGE=ghcr.io/${{ github.repository }}:${{ env.TEST_TAG }}" >> $GITHUB_ENV
 
       - name: Pull Image
         run: docker pull "${{ env.DEV_IMAGE }}"
 
       - name: Create Image Tags
         run: |
-          echo "DEV_IMAGE=ghcr.io/${{ github.repository }}:${{ env.TEST_TAG }}" >> $GITHUB_ENV
           echo "GHCR_PROD_IMAGE=ghcr.io/${{ env.PROD_REPO }}:${{ env.TEST_TAG }}" >> $GITHUB_ENV
           echo "GHCR_PROD_LATEST_IMAGE=ghcr.io/${{ env.PROD_REPO }}:latest" >> $GITHUB_ENV
           echo "DH_PROD_IMAGE=synthetik/blastfoam:latest" >> $GITHUB_ENV
