--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -116,3 +116,14 @@ jobs:
           image: blastfoam-dev
           image-registry: ghcr.io/synthetik-technologies
           version: ${{ needs.version.outputs.version }}
+
+  push-public-release:
+    needs:
+      - version
+      - build
+      - build-docker
+    uses: ./.github/workflows/public-deployment.yaml
+    with:
+      prod_repo: synthetik-technologies/blastfoam-public-test
+      tag: ${{ needs.version.outputs.version }}
+    secrets: inherit
