--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,10 @@
     {
       "name": "staging",
       "prerelease": true
+    },
+    {
+      "name": "9-push-main-to-public-repo",
+      "prerelease": true
     }
   ],
   "plugins": [
@@ -32,6 +36,10 @@
           },
           {
             "type": "BUG",
+            "release": "patch"
+          },
+          {
+            "type": "ci",
             "release": "patch"
           }
         ]
