--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -123,6 +123,7 @@ jobs:
       - version
       - build
       - build-docker
+      - release-deb
     uses: ./.github/workflows/public-deployment.yaml
     with:
       prod_repo: synthetik-technologies/blastfoam-public-test
