--- a/debian/blastfoam/DEBIAN/control
+++ b/debian/blastfoam/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: blastfoam
-Version: 5.2.0-9-push-main-to-public-repo.3
+Version: 5.2.0-develop.4
 Architecture: amd64
 Maintainer: Ubuntu <>
 Installed-Size: 265
