--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -58,40 +58,27 @@ jobs:
         with:
           username: jacobhoehler
           password: ${{ secrets.DOCKERHUB_JH }}
-      # - name: Construct Dev Tag
-      #   run: echo "DEV_IMAGE=ghcr.io/${{ github.repository }}:${{ inputs.tag }}" >> $GITHUB_ENV
 
-      - name: Download Debian Package
-        uses: actions/download-artifact@v3
-        with:
-          name: blastfoam-package
-          path: ${{ github.workspace }}
+      - name: Construct Dev Tag
+        run: echo "DEV_IMAGE=ghcr.io/${{ github.repository }}:${{ inputs.tag }}" >> $GITHUB_ENV
 
-      - name: Build and Push Image
-        uses: synthetik-technologies/actions/composites/docker-build-push@v1.2.0
-        with:
-          ssh-key-needed: "false"
-          image: ${{ inputs.prod_repo }}
-          image-registry: ghcr.io
-          version: ${{ inputs.tag }}
+      - name: Create Image Tags
+        run: |
+          echo "GHCR_PROD_IMAGE=ghcr.io/${{ inputs.prod_repo }}:${{ inputs.tag }}" >> $GITHUB_ENV
+          echo "GHCR_PROD_LATEST_IMAGE=ghcr.io/${{ inputs.prod_repo }}:latest" >> $GITHUB_ENV
+          echo "DH_PROD_IMAGE=synthetik/blastfoam:latest" >> $GITHUB_ENV
+          echo "DH_PROD_LATEST_IMAGE=synthetik/blastfoam:${{ inputs.tag }}" >> $GITHUB_ENV
 
-      # - name: Create Image Tags
-      #   run: |
-      #     echo "GHCR_PROD_IMAGE=ghcr.io/${{ inputs.prod_repo }}:${{ inputs.tag }}" >> $GITHUB_ENV
-      #     echo "GHCR_PROD_LATEST_IMAGE=ghcr.io/${{ inputs.prod_repo }}:latest" >> $GITHUB_ENV
-      #     echo "DH_PROD_IMAGE=synthetik/blastfoam:latest" >> $GITHUB_ENV
-      #     echo "DH_PROD_LATEST_IMAGE=synthetik/blastfoam:${{ inputs.tag }}" >> $GITHUB_ENV
+      - name: Tag Images
+        run: |
+          docker tag blastfoam:latest ${{ env.GHCR_PROD_IMAGE }}
+          docker tag blastfoam:latest ${{ env.GHCR_PROD_LATEST_IMAGE }}
+          docker tag blastfoam:latest ${{ env.DH_PROD_IMAGE }}
+          docker tag blastfoam:latest ${{ env.DH_PROD_LATEST_IMAGE }}
 
-      # - name: Tag Images
-      #   run: |
-      #     docker tag blastfoam:latest ${{ env.GHCR_PROD_IMAGE }}
-      #     docker tag blastfoam:latest ${{ env.GHCR_PROD_LATEST_IMAGE }}
-      #     docker tag blastfoam:latest ${{ env.DH_PROD_IMAGE }}
-      #     docker tag blastfoam:latest ${{ env.DH_PROD_LATEST_IMAGE }}
-
-      # - name: Push Images
-      #   run: |
-      #     docker push ${{ env.GHCR_PROD_IMAGE }}
-      #     docker push ${{ env.GHCR_PROD_LATEST_IMAGE }}
-      #     docker push ${{ env.DH_PROD_IMAGE }}
-      #     docker push ${{ env.DH_PROD_LATEST_IMAGE }}
+      - name: Push Images
+        run: |
+          docker push ${{ env.GHCR_PROD_IMAGE }}
+          docker push ${{ env.GHCR_PROD_LATEST_IMAGE }}
+          docker push ${{ env.DH_PROD_IMAGE }}
+          docker push ${{ env.DH_PROD_LATEST_IMAGE }}
