ci: only release latest image

--- a/.releaserc
+++ b/.releaserc
@@ -53,9 +53,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "debian"
-        ]
+        "assets": false
       }
     ]
   ]
