--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,10 @@
     {
       "name": "staging",
       "prerelease": true
+    },
+    {
+      "name": "37-two-tags-created-on-public-repo",
+      "prerelease": true
     }
   ],
   "plugins": [
