Revert "debug: disable deploying Docker image"
This reverts commit 5568e963b0788306edf2b5dc93b717e5b3800c95.

Revert "ci: debug, push to "public" on every branch"

This reverts commit 1103c2eeb3fe545b7566b1f0c25c54a274291e2a.

Revert "debug: update settings to allow for CI testing"

This reverts commit 61dfd93f817f86a57b69da4470c2427bca74b73e.

Revert "ci: run release on feature branch"

This reverts commit 0ba95fe8cffd7e9c6f01fe5cfeb903501f457662.

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -7,7 +7,6 @@ on:
       - "master"
       - "staging"
       - "develop"
-      - "37-two-tags-created-on-public-repo"
 
 concurrency:
   #* Only run one run at a time
@@ -129,8 +128,8 @@ jobs:
       - build-docker
       - release-deb
     uses: ./.github/workflows/public-deployment.yaml
-    # if: github.ref_name == 'main' #* only run on main
+    if: github.ref_name == 'main' #* only run on main
     with:
-      prod_repo: synthetik-technologies/blastfoam-public-test
+      prod_repo: synthetik-technologies/blastfoam
       tag: ${{ needs.version.outputs.version }}
     secrets: inherit
