Revert "ci: remove git plugin from release"
This reverts commit c8548e7654da59da0d11d4c9a3234e5b54b3be7d.

--- a/.releaserc
+++ b/.releaserc
@@ -53,6 +53,12 @@
         "prepareCmd": "./.updateDeb.sh ${nextRelease.version}",
         "publishCmd": "echo VERSION=${nextRelease.version} >> $GITHUB_ENV"
       }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": false
+      }
     ]
   ]
 }
