ci: only add README to assets

--- a/.releaserc
+++ b/.releaserc
@@ -57,7 +57,9 @@
     [
       "@semantic-release/git",
       {
-        "assets": false
+        "assets": [
+          "README.md"
+        ]
       }
     ]
   ]
