ci: upload version changes in Debian directory

--- a/.releaserc
+++ b/.releaserc
@@ -58,7 +58,7 @@
       "@semantic-release/git",
       {
         "assets": [
-          "README.md"
+          "debian/**"
         ]
       }
     ]
