--- a/.github/workflows/public-deployment.yaml
+++ b/.github/workflows/public-deployment.yaml
@@ -38,6 +38,7 @@ jobs:
   docker:
     name: Deploy Docker Image
     runs-on: ubuntu-latest
+    if: ${{ false }}
     steps:
       - name: Login to GitHub Registry
         uses: docker/login-action@v2
